--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,25 +1,24 @@
-name: Publish to GitHub Pages
-
+name: Build and publish to pages
 on:
   push:
     branches:
-      - master
+    - main
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out
-        uses: actions/checkout@v1
-
-      - name: Install Emacs
-        run: sudo apt install emacs-nox --yes
-
-      - name: Build the site
-        run: ./build.sh
-
-      - name: Publish generated content to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.4
-        with:
-          branch: gh-pages
-          folder: public
+    - uses: actions/checkout@main
+      with:
+        fetch-depth: 1
+    - name: build
+      uses: docker://iquiw/alpine-emacs
+      if: github.event.deleted == false
+      with:
+        args: ./build.sh
+    - name: deploy
+      uses: peaceiris/actions-gh-pages@v3
+      if: success()
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
